styled nav and header

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,5 +1,17 @@
 // Import Fonts
 @font-face {
-  font-family: "FontName";
-  src: url("../assets/fonts/FontName.ttf") format("truetype");
+  font-family: "LatoLight";
+  src: url("assets/fonts/LatoLight.ttf") format("truetype");
+}
+@font-face {
+  font-family: "LatoRegular";
+  src: url("assets/fonts/LatoRegular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "MyriadPro";
+  src: url("assets/fonts/MyriadPro.otf") format("truetype");
+}
+@font-face {
+  font-family: "PtSans";
+  src: url("assets/fonts/PtSans.ttf") format("truetype");
 }
