--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -13,5 +13,5 @@
 }
 @font-face {
   font-family: "PtSans";
-  src: url("assets/fonts/PtSans.ttf") format("truetype");
+  src: url("assets/fonts/PTSans.ttf") format("truetype");
 }
