--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -15,3 +15,7 @@
   font-family: "PtSans";
   src: url("assets/fonts/PTSans.ttf") format("truetype");
 }
+@font-face {
+  font-family: "Helvetica";
+  src: url("assets/fonts/Helvetica.otf") format("truetype");
+}
