--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -29,6 +29,8 @@ Porto Shop is based on Underscores https://underscores.me/, (C) 2012-2018 Ostap,
 @import "layout/header";
 @import "layout/services";
 @import "layout/advantages";
+@import "layout/testing";
+@import "layout/slider";
 @import "layout/footer";
 // ======================= //
 // ===== Pages Folder====== //
