--- a/src/assets/scss/layout/_advantages.scss
+++ b/src/assets/scss/layout/_advantages.scss
@@ -19,6 +19,47 @@
     &:nth-child(even) {
       justify-content: flex-end;
     }
+    &__icon {
+      position: relative;
+      &:after {
+        content: "";
+        position: absolute;
+        width: 84px;
+        border-radius: 50%;
+        z-index: -1;
+        height: 84px;
+        top: 9px;
+        left: 7px;
+        box-shadow: 0 0 0 50px rgba(255, 188, 64, 1);
+        animation: pulse 2s infinite;
+
+        @-webkit-keyframes pulse {
+          0% {
+            -webkit-box-shadow: 0 0 0 0 rgba(255, 188, 64, 1);
+          }
+          70% {
+            -webkit-box-shadow: 0 0 0 20px rgba(255, 188, 64, 0.08);
+          }
+          100% {
+            -webkit-box-shadow: 0 0 0 0 rgba(255, 188, 64, 0);
+          }
+        }
+        @keyframes pulse {
+          0% {
+            -moz-box-shadow: 0 0 0 0 rgba(255, 188, 64, 1);
+            box-shadow: 0 0 0 0 rgba(255, 188, 64, 1);
+          }
+          70% {
+            -moz-box-shadow: 0 0 0 20px rgba(255, 188, 64, 0.08);
+            box-shadow: 0 0 0 20px rgba(255, 8, 0, 0.08);
+          }
+          100% {
+            -moz-box-shadow: 0 0 0 0 rgba(255, 188, 64, 0);
+            box-shadow: 0 0 0 0 rgba(255, 188, 64, 0);
+          }
+        }
+      }
+    }
     // align-items: center;
     &__text {
       margin-left: 20px;
