--- a/src/assets/scss/layout/_navigation.scss
+++ b/src/assets/scss/layout/_navigation.scss
@@ -20,6 +20,7 @@ nav.primary-nav {
           transition: all 0.5s ease-in-out;
           &:hover {
             text-decoration: none;
+            color: #ffbc40;
           }
         }
       }
@@ -32,6 +33,13 @@ nav.primary-nav {
         color: #fff;
         background-color: #55a3d4;
         border-radius: 19px;
+        position: relative;
+        transition: all 0.5s ease-in-out;
+        &:hover {
+          box-shadow: 0 0 42px 4px rgba(85, 163, 212, 0.5);
+          transform: scale(1.03);
+          opacity: 0.8;
+        }
       }
     }
   }
@@ -67,6 +75,42 @@ nav.secondary-nav {
       @include font("MyriadPro", 17px, 900, normal);
       text-transform: uppercase;
       color: #fff;
+      position: relative;
+      transition: all 0.5s ease;
+      &.active {
+        &:before {
+          content: "";
+          position: absolute;
+          bottom: 5px;
+          left: 0;
+          right: 0;
+          margin-left: auto;
+          margin-right: auto;
+          height: 2px;
+          width: 85%;
+          background-color: #bbdafb;
+        }
+      }
+      &:hover {
+        -webkit-mask-image: linear-gradient(
+          -75deg,
+          rgba(0, 0, 0, 0.6) 30%,
+          #000 50%,
+          rgba(0, 0, 0, 0.6) 70%
+        );
+        -webkit-mask-size: 200%;
+        animation: shine 1.5s infinite;
+      }
+
+      @-webkit-keyframes shine {
+        from {
+          -webkit-mask-position: 150%;
+        }
+
+        to {
+          -webkit-mask-position: -50%;
+        }
+      }
     }
   }
 }
