--- a/src/assets/scss/layout/_slider.scss
+++ b/src/assets/scss/layout/_slider.scss
@@ -35,8 +35,8 @@
     }
   }
   @media screen and (min-width: 768px) and (max-width: 991px) {
-    margin-top: 120px;
-    margin-bottom: 120px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     h2 {
       font-size: 33px;
     }
@@ -56,8 +56,8 @@
   }
 
   @media screen and (min-width: 576px) and (max-width: 767px) {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     h2 {
       font-size: 33px;
       line-height: 30px;
@@ -65,7 +65,7 @@
     #carouselProduction {
       a {
         img {
-          max-width: 20px;
+          max-width: 30px;
         }
       }
       .carousel-item div {
@@ -78,16 +78,18 @@
   }
 
   @media screen and (max-width: 575px) {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     h2 {
-      font-size: 28px;
-      line-height: 30px;
+      font-size: 24px;
+      letter-spacing: normal;
+      line-height: 20px;
+      margin-bottom: 30px;
     }
     #carouselProduction {
       a {
         img {
-          max-width: 20px;
+          max-width: 30px;
         }
       }
       .carousel-item div {
