--- a/src/assets/scss/layout/_testing.scss
+++ b/src/assets/scss/layout/_testing.scss
@@ -39,4 +39,98 @@
       }
     }
   }
+  @media screen and (min-width: 992px) and (max-width: 1199px) {
+    .step-item {
+      &__icon {
+        img {
+          max-width: 80px;
+          height: auto;
+        }
+      }
+    }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+    .section-title {
+      h2 {
+        font-size: 47px;
+        letter-spacing: 2.75px;
+      }
+    }
+    .step-item {
+      margin-top: 50px !important;
+      justify-content: flex-start;
+      &__icon {
+        img {
+          max-width: 70px;
+          height: auto;
+        }
+      }
+    }
+  }
+
+  @media screen and (min-width: 576px) and (max-width: 767px) {
+    .section-title {
+      h2 {
+        font-size: 36px;
+        letter-spacing: normal;
+      }
+    }
+    .step-item {
+      margin-top: 50px !important;
+      justify-content: flex-start;
+      &__icon {
+        img {
+          max-width: 50px;
+          height: auto;
+        }
+      }
+      &__text {
+        h5 {
+          font-size: 30px;
+          letter-spacing: normal;
+        }
+        p {
+          font-size: 16px;
+          letter-spacing: normal;
+          line-height: normal;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 575px) {
+    padding-bottom: 30px;
+    .section-title {
+      padding-top: 30px;
+      h2 {
+        font-size: 30px;
+        letter-spacing: normal;
+      }
+    }
+    .step-item {
+      margin-top: 30px !important;
+      &:not(:first-child) {
+        margin-top: 40px;
+      }
+      justify-content: flex-start;
+      &__icon {
+        img {
+          max-width: 70px;
+          height: auto;
+        }
+      }
+      &__text {
+        h5 {
+          font-size: 28px;
+          letter-spacing: normal;
+        }
+        p {
+          font-size: 16px;
+          letter-spacing: normal;
+          line-height: normal;
+        }
+      }
+    }
+  }
 }
