--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -122,4 +122,114 @@ footer {
       color: #dd221c;
     }
   }
+  @media screen and (min-width: 768px) and (max-width: 991px) {
+    .one {
+      order: 3;
+      margin-top: 20px;
+    }
+    .two {
+      order: 1;
+    }
+    .three {
+      order: 2;
+    }
+    .four {
+      order: 4;
+      margin-top: 20px;
+      a {
+        font-size: 20px;
+      }
+    }
+    .copyright {
+      margin-top: 20px;
+    }
+  }
+
+  @media screen and (min-width: 576px) and (max-width: 767px) {
+    .one {
+      order: 3;
+      margin-top: 20px;
+      ul li a {
+        font-size: 15px;
+      }
+      .social {
+        a {
+          img {
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+    }
+    .two {
+      order: 1;
+    }
+    .three {
+      order: 2;
+      ul li a {
+        font-size: 15px;
+      }
+    }
+    .four {
+      order: 4;
+      margin-top: 20px;
+      a {
+        font-size: 18px;
+      }
+    }
+    .copyright {
+      margin-top: 20px;
+    }
+  }
+
+  @media screen and (max-width: 575px) {
+    .one {
+      order: 3;
+      margin-top: 20px;
+      ul li a {
+        font-size: 15px;
+      }
+      .social {
+        text-align: center;
+        a {
+          img {
+            width: 35px;
+            height: 35px;
+          }
+        }
+      }
+      p {
+        text-align: center;
+      }
+    }
+    .two {
+      order: 1;
+    }
+    .three {
+      order: 2;
+      ul li a {
+        font-size: 15px;
+      }
+    }
+    .four {
+      order: 4;
+      margin-top: 20px;
+      text-align: center;
+      small {
+        font-size: 13px;
+      }
+      a {
+        font-size: 16px;
+        &.email {
+          padding-top: 10px;
+        }
+      }
+      .button {
+        padding-top: 10px;
+      }
+    }
+    .copyright {
+      margin-top: 20px;
+    }
+  }
 }
