styled about-page

--- a/src/assets/scss/layout/_advantages.scss
+++ b/src/assets/scss/layout/_advantages.scss
@@ -1,5 +1,6 @@
 #advantages {
   margin-top: 20px;
+  margin-bottom: 85px;
   background: url("assets/images/advantages-bg.png");
   background-size: auto;
   background-position: center center;
