--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -35,4 +35,5 @@ Porto Shop is based on Underscores https://underscores.me/, (C) 2012-2018 Ostap,
 // ======================= //
 // ===== Pages Folder====== //
 @import "pages/home";
+@import "pages/about-page";
 // ======================= //
