--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -38,4 +38,5 @@ Porto Shop is based on Underscores https://underscores.me/, (C) 2012-2018 Ostap,
 @import "pages/about-page";
 @import "pages/contacts-page";
 @import "pages/services-page";
+@import "pages/blog-page";
 // ======================= //
