--- a/src/assets/scss/pages/_services-page.scss
+++ b/src/assets/scss/pages/_services-page.scss
@@ -33,7 +33,7 @@
       letter-spacing: 1px;
       padding: 50px 20px 60px 20px;
       p {
-        font-size: 15px;
+        font-size: 17px;
         color: #000;
         line-height: 25px;
       }
@@ -46,7 +46,7 @@
         font-family: "LatoLight", sans-serif;
         font-weight: bold;
         color: #0a4f91;
-        font-size: 20px;
+        font-size: 23px;
         line-height: 25px;
         margin-top: 40px;
         margin-bottom: 40px;
@@ -62,6 +62,13 @@
     .main-content {
       .page-text {
         padding: 35px 15px 35px 15px;
+        p,
+        li,
+        a,
+        ul,
+        ol {
+          font-size: 15px;
+        }
         h1,
         h2,
         h3,
