--- a/src/assets/scss/pages/_blog-page.scss
+++ b/src/assets/scss/pages/_blog-page.scss
@@ -28,8 +28,10 @@
     margin-top: 50px;
     &__image {
       position: relative;
+      height: 280px;
       img {
         width: 100%;
+        height: 100%;
       }
       .date {
         position: absolute;
@@ -74,6 +76,12 @@
   }
   @media screen and (max-width: 575px) {
     .blog-item {
+      &__image {
+        height: auto;
+        img {
+          height: auto;
+        }
+      }
       &__text {
         p {
           font-size: 16px;
