--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,17 +1,13 @@
 /*!
-Theme Name:   Template name
-Theme URI:    https://woocommerce.com/storefront/
-Author:       Ostap
-Author URI:   https://woocommerce.com/
-Description:  Template name is the perfect theme for your next WooCommerce project. Designed and developed by WooCommerce Core developers, it features a bespoke integration with WooCommerce itself plus many of the most popular customer facing WooCommerce extensions. There are several layout & color options to personalise your shop, multiple widget regions, a responsive design and much more. Developers will love its lean and extensible codebase making it a joy to customize and extend. Looking for a WooCommerce theme? Look no further!
+Theme Name:   DetectivOper
+Author:       Mark-Lab.biz (Front-end Developer Ostap Hetman)
+Author URI:   http://mark-lab.biz/
+Description:  Special theme form DetectivOper. Designed and developed by Mark-Lab Core developers.
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain:  Template name
-Tags:         e-commerce, two-columns, left-sidebar, right-sidebar, custom-background, custom-colors, custom-header, custom-menu, featured-images, full-width-template, threaded-comments, accessibility-ready, rtl-language-support, footer-widgets, sticky-post, theme-options
 This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-Porto Shop is based on Underscores https://underscores.me/, (C) 2012-2018 Ostap, Inc.
+DetectivOper is based on Underscores https://underscores.me/, (C) 2012-2018 Mark-Lab.biz, Inc.
 */
 
 // ===== Base Folder====== //
@@ -45,3 +41,6 @@ Porto Shop is based on Underscores https://underscores.me/, (C) 2012-2018 Ostap,
 @import "pages/single-page";
 @import "pages/404-page";
 // ======================= //
+html {
+  overflow-x: hidden;
+}
